BIOS 에 Fat32 lib추가 SD SPI Driver 빌드 되도록 설정

--- a/src/main_app/tda2xx/ipu1_0/Ipu1_0.cfg
+++ b/src/main_app/tda2xx/ipu1_0/Ipu1_0.cfg
@@ -179,5 +179,7 @@ else
     /* allocate timer 9 to IPU0 */
     var TimerSupport = xdc.useModule('ti.sysbios.family.shared.vayu.TimerSupport');
     TimerSupport.availMask = 0x0500;
+    
+	var FatFS = xdc.useModule('ti.sysbios.fatfs.FatFS');
 }
 
