error 모니터링 하는 task 추가  - max9240의 error, lock, lflt 핀을 감시

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -57,6 +57,7 @@ include $(MODULE_SRC_BASE_PATH)/tda2xx/src/links/split/SRC_FILES.MK
 include $(MODULE_SRC_BASE_PATH)/tda2xx/src/links/uartCmd/SRC_FILES.MK
 include $(MODULE_SRC_BASE_PATH)/tda2xx/src/links/ultrasonic_capture/SRC_FILES.MK
 include $(MODULE_SRC_BASE_PATH)/tda2xx/src/links/link_stats_monitor/SRC_FILES.MK
+include $(MODULE_SRC_BASE_PATH)/tda2xx/src/links/error_monitor/SRC_FILES.MK
 include $(MODULE_SRC_BASE_PATH)/tda2xx/src/usecases/vip_stereo_calibration/SRC_FILES.MK
 include $(MODULE_SRC_BASE_PATH)/tda2xx/src/usecases/network_stereo_display/SRC_FILES.MK
 include $(MODULE_SRC_BASE_PATH)/tda2xx/src/usecases/iss_mult_capture_isp_simcop_sv_tda3xx/SRC_FILES.MK
