--- a/src/main_app/tda2xx/ipu1_0/Ammu1_bios.cfg
+++ b/src/main_app/tda2xx/ipu1_0/Ammu1_bios.cfg
@@ -31,7 +31,16 @@
  * address mapping as shown below,
  *
  *   Virutal Address          Physical Address
- *  0x60000000:0x7FFFFFFF -> 0x40000000:0x5FFFFFFF   (512MB)
+ *  0x60000000:0x7FFFFFFF -> 0x40000000:0x5FFFFFFF   (512MB)var entry = AMMU.largePages[3];
+    entry.pageEnabled = AMMU.Enable_YES;
+    entry.translationEnabled = AMMU.Enable_YES;
+    entry.logicalAddress = 0x08000000;
+    entry.translatedAddress = 0x08000000;
+    entry.size = AMMU.Large_512M;
+    entry.L1_cacheable = AMMU.CachePolicy_NON_CACHEABLE;
+    entry.L1_posted = AMMU.PostedPolicy_NON_POSTED;
+    entry.L2_cacheable = AMMU.CachePolicy_NON_CACHEABLE;
+    entry.L2_posted = AMMU.PostedPolicy_NON_POSTED;
  *
  * However this wastes a large page which can be used for other purposes 
  * Ex, mapping GPMC NOR memory of 64MB.
@@ -217,16 +226,16 @@ function init()
     entry.L1_posted = AMMU.PostedPolicy_POSTED;
     entry.L2_cacheable = AMMU.CachePolicy_NON_CACHEABLE;
     entry.L2_posted = AMMU.PostedPolicy_NON_POSTED;
-/*
-    var entry = AMMU.largePages[3];
+
+	var entry = AMMU.largePages[3];
     entry.pageEnabled = AMMU.Enable_YES;
     entry.translationEnabled = AMMU.Enable_YES;
-    entry.logicalAddress = 0x60000000;
-    entry.translatedAddress = 0x40000000;
+    entry.logicalAddress = 0x08000000;
+    entry.translatedAddress = 0x08000000;
     entry.size = AMMU.Large_512M;
     entry.L1_cacheable = AMMU.CachePolicy_NON_CACHEABLE;
     entry.L1_posted = AMMU.PostedPolicy_NON_POSTED;
     entry.L2_cacheable = AMMU.CachePolicy_NON_CACHEABLE;
     entry.L2_posted = AMMU.PostedPolicy_NON_POSTED;
-*/
+
 }
